[package]
name = "rate-limiter"
version = "0.1.0"
description = "IP Rater Limiter handled in Rust"
license = "MIT"
edition = "2021"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.39"
dashmap = "6.1.0"
neon = "1"
